[gd_scene load_steps=5 format=3 uid="uid://0vpi47bbrjfc"]

[ext_resource type="Script" uid="uid://dub0w1pt21gno" path="res://Global_hud.gd" id="1_aigy5"]
[ext_resource type="FontFile" uid="uid://42y8s0xqtt1n" path="res://assets/font/font_game.tres" id="6_0wwkh"]
[ext_resource type="PackedScene" uid="uid://j33syemimg3f" path="res://scenes/hud/background.tscn" id="9_wi0jm"]

[sub_resource type="Theme" id="Theme_q4q5n"]

[node name="Menu Main" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_aigy5")

[node name="sound_menu" type="AudioStreamPlayer2D" parent="."]

[node name="VBoxBotones" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -80.0
offset_top = -68.0
offset_right = 80.0
offset_bottom = 68.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 40

[node name="play" type="Button" parent="VBoxBotones"]
layout_mode = 2
theme = SubResource("Theme_q4q5n")
theme_override_colors/font_hover_color = Color(1, 0, 0, 1)
theme_override_colors/font_outline_color = Color(1, 0.996078, 1, 1)
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 9
theme_override_fonts/font = ExtResource("6_0wwkh")
theme_override_font_sizes/font_size = 55
text = "PLAY"
flat = true

[node name="exit" type="Button" parent="VBoxBotones"]
layout_mode = 2
theme = SubResource("Theme_q4q5n")
theme_override_colors/font_hover_color = Color(1, 0, 0, 1)
theme_override_colors/font_outline_color = Color(1, 0.996078, 1, 1)
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 8
theme_override_fonts/font = ExtResource("6_0wwkh")
theme_override_font_sizes/font_size = 55
text = "QUIT"
flat = true

[node name="options" type="Button" parent="."]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_top = -48.0
offset_right = 217.0
grow_vertical = 0
theme = SubResource("Theme_q4q5n")
theme_override_colors/font_outline_color = Color(1, 0.996078, 1, 1)
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 8
theme_override_fonts/font = ExtResource("6_0wwkh")
theme_override_font_sizes/font_size = 55
text = "OPTIONS"
flat = true

[node name="Background2" parent="." instance=ExtResource("9_wi0jm")]

[connection signal="pressed" from="VBoxBotones/play" to="." method="_on_play_pressed"]
[connection signal="pressed" from="VBoxBotones/exit" to="." method="_on_exit_pressed"]
[connection signal="pressed" from="options" to="." method="_on_options_pressed"]
