[gd_scene load_steps=11 format=3 uid="uid://d4di1n2ndoqm3"]

[ext_resource type="Script" uid="uid://dub0w1pt21gno" path="res://Global_hud.gd" id="1_0joif"]
[ext_resource type="Shader" uid="uid://r621tvcnd0ql" path="res://shaders/pause_blur_shaders.gdshader" id="2_r8yp4"]
[ext_resource type="Texture2D" uid="uid://h412wt6r5wx4" path="res://assets/buttons/pausa logo.png" id="3_r1fnm"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_m0klm"]
shader = ExtResource("2_r8yp4")
shader_parameter/lod = 0.0

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_x2r2e"]
bg_color = Color(0.758192, 0.758192, 0.758192, 1)
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_0uo3r"]
bg_color = Color(0.08, 0.08, 0.08, 1)
corner_radius_top_left = 60
corner_radius_top_right = 60
corner_radius_bottom_right = 60
corner_radius_bottom_left = 60

[sub_resource type="Animation" id="Animation_cg718"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("bg_overlay:material:shader_parameter/lod")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}

[sub_resource type="Animation" id="Animation_ftjbs"]
resource_name = "pause_blur"
length = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("bg_overlay:material:shader_parameter/lod")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [0.0, 1.0]
}

[sub_resource type="Animation" id="Animation_cy2kx"]
resource_name = "resume_pause_blur"
length = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("bg_overlay:material:shader_parameter/lod")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [1.0, 0.0]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_4om0x"]
_data = {
&"RESET": SubResource("Animation_cg718"),
&"pause_blur": SubResource("Animation_ftjbs"),
&"resume_pause_blur": SubResource("Animation_cy2kx")
}

[node name="Pause" type="Control"]
process_mode = 3
layout_mode = 3
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(1.62714, 1.62714)
script = ExtResource("1_0joif")

[node name="blur_pausa" type="CanvasLayer" parent="."]

[node name="bg_overlay" type="ColorRect" parent="blur_pausa"]
material = SubResource("ShaderMaterial_m0klm")
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 6

[node name="sound_pause_off" type="AudioStreamPlayer2D" parent="blur_pausa/bg_overlay"]
position = Vector2(436, 253)
scale = Vector2(1.62714, 1.62714)

[node name="sound_pause_on" type="AudioStreamPlayer2D" parent="blur_pausa/bg_overlay"]
position = Vector2(436, 253)
scale = Vector2(1.62714, 1.62714)

[node name="VBoxContainer" type="VBoxContainer" parent="blur_pausa/bg_overlay"]
visible = false
layout_mode = 1
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -1860.0
offset_top = -839.0
offset_right = 55.0
offset_bottom = 875.0
grow_horizontal = 0
grow_vertical = 2
scale = Vector2(0.1, 0.1)
pivot_offset = Vector2(865, 910)
alignment = 1

[node name="buttons" type="AudioStreamPlayer2D" parent="blur_pausa/bg_overlay/VBoxContainer"]

[node name="text_paused" type="Sprite2D" parent="blur_pausa/bg_overlay/VBoxContainer"]
visible = false
position = Vector2(893.295, -1043.5)
scale = Vector2(1.58652, 1.58652)
texture = ExtResource("3_r1fnm")

[node name="menu" type="Button" parent="blur_pausa/bg_overlay/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_hover_color = Color(0, 0, 0, 1)
theme_override_colors/font_color = Color(0.95, 0.95, 0.95, 1)
theme_override_font_sizes/font_size = 200
theme_override_styles/focus = SubResource("StyleBoxFlat_x2r2e")
theme_override_styles/normal = SubResource("StyleBoxFlat_0uo3r")
text = "MENU"

[node name="Space1" type="Control" parent="blur_pausa/bg_overlay/VBoxContainer"]
custom_minimum_size = Vector2(0, 100)
layout_mode = 2

[node name="restart" type="Button" parent="blur_pausa/bg_overlay/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_hover_color = Color(0, 0, 0, 1)
theme_override_colors/font_color = Color(0.95, 0.95, 0.95, 1)
theme_override_font_sizes/font_size = 200
theme_override_styles/focus = SubResource("StyleBoxFlat_x2r2e")
theme_override_styles/normal = SubResource("StyleBoxFlat_0uo3r")
text = "RESTART"

[node name="Space2" type="Control" parent="blur_pausa/bg_overlay/VBoxContainer"]
custom_minimum_size = Vector2(0, 100)
layout_mode = 2

[node name="exit" type="Button" parent="blur_pausa/bg_overlay/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_hover_color = Color(0, 0, 0, 1)
theme_override_colors/font_color = Color(0.95, 0.95, 0.95, 1)
theme_override_font_sizes/font_size = 200
theme_override_styles/focus = SubResource("StyleBoxFlat_x2r2e")
theme_override_styles/normal = SubResource("StyleBoxFlat_0uo3r")
text = "EXIT"

[node name="Space3" type="Control" parent="blur_pausa/bg_overlay/VBoxContainer"]
custom_minimum_size = Vector2(0, 100)
layout_mode = 2

[node name="info" type="Label" parent="blur_pausa/bg_overlay/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_font_sizes/font_size = 90
text = "Esc para regresar"
horizontal_alignment = 1

[node name="animator" type="AnimationPlayer" parent="blur_pausa"]
libraries = {
&"": SubResource("AnimationLibrary_4om0x")
}

[connection signal="pressed" from="blur_pausa/bg_overlay/VBoxContainer/menu" to="." method="_on_menu_pressed"]
[connection signal="pressed" from="blur_pausa/bg_overlay/VBoxContainer/restart" to="." method="_on_restart_pressed"]
[connection signal="pressed" from="blur_pausa/bg_overlay/VBoxContainer/exit" to="." method="_on_exit_pressed"]
